Fix link box title
Replace h2 by link-box-title so that it doesn't get included in the toc
and the lines are not too close to each other.

--- a/modules/custom/cp_spotlights/css/cp_spotlights.css
+++ b/modules/custom/cp_spotlights/css/cp_spotlights.css
@@ -15,7 +15,7 @@
 	position: relative;
 }
 
-.block-inline-blocklink-box .link-box-image h2,
+.block-inline-blocklink-box .link-box-title,
 .view-spotlight .views-field-title {
 	position: absolute;
 	bottom: 0;
